	* added editing support for ml4 files (but no parser and no outline)    
	
* 1.0.6 (July 25 2007)
	* hyperlinks now find renamed modules in current module
	* hyperlinks now work correctly with definitions like: "let a = 2;; let a = a in let a = a in a;;" 
	* modified the paths preference page to make it more intuitive
	* added an option to "unnest" "let in" definitions (activated by default)
	* added "while" and "begin end" templates 
	* improved outline speed
	
* 1.0.7 (July 27 2007)
	* Completion, hyperlinks, and the module browser are now based on the new parser (major refactoring)
	* Drastic speed-up of hyperlinks which open other modules
	* Tweaked the 'unnest in' option, and corrected a bug which caused definitions to appear out of order.
	* Split the outline preference page into two pages, because it was too long.
	* Fixed a bug with definitions that appeared several times in the outline when the code was not syntactically correct.
	* Fixed a bug with syntax coloring of ocamldoc comments
	* If the debugger doesn't want to exit after clicking on "terminate", a second click on the "terminate" button will kill it, together with the debugged process
	* Added an option (for the editor) to automatically add the closing double-quote
	* "Convert revised syntax to standard syntax" and "Format with camlp4" actions now display the potential error message
	* Definitions cache now uses soft references
	* Added an option to not display 'and' definitions in blue in the outline
	
* 1.0.8
	* Now, completion gives elements found in other modules even if there is no associated mli
	* Corrected a rare bug with syntax-coloring of ocamldoc comments
	* Now, a different (red) icon appears in completion results for modules that couldn't be parsed
	* Changed the 'let in' icon in the outline: now, the (+) icon only appears when the definition is at toplevel
	* The integrated lexer now supports linenum directives   
	
	
	
	
	
	